# isd-lite-data

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
demo/: demo_data_stations_filter_by_US_state.py  demo_data_stations_metadata.py  demo_ncei_download_stations.py
demos/: demo_conus_observations_create_netcdf.py  demo_conus_observations_load_netcdf.py  demo_data_stations.py  demo_data_stations_filter_by_country.py  demo_ncei_download.py  demo_ncei_download_year_range.py  demo_switzerland_observations_create_netcdf.py  demo_switzerland_observations_load_netcdf.py
docs/: public-api.md
scripts/: CONUS_Metadata_Download.py  CONUS_Observations_Create_netCDF.py  CONUS_Observations_Download.py  CONUS_Observations_Load.py  CONUS_Observations_Load_netCDF.py  Download_CONUS.py  Download_CONUS_Stations_Metadata.py  Download_CONUS_Stations_Observations.py  Download_Switzerland.py  Switzerland_Metadata_Download.py  Switzerland_Observations_Create_netCDF.py  Switzerland_Observations_Download.py  Switzerland_Observations_Load.py  Switzerland_Observations_Load_netCDF.py  setup-dev-env.sh
src/isd_lite_data/: __init__.py  build_isd_lite_dataset.py  data.py  ncei.py  rto_iso.py  stations.py
src/isd_lite_data/data/CensusBureau/: README.txt
src/isd_lite_data/data/EIA/: RTO_ISO_regions.README
src/isd_lite_data/data/WorldBank/: README.txt
src/isd_lite_data/data/WorldBank/WB_countries_Admin0_10m/: WB_countries_Admin0_10m.dbf
tests/: test_data_stations.py  test_data_stations_filter_by_US_state.py  test_data_stations_filter_by_country.py  test_data_stations_metadata.py  test_ncei_download.py  test_ncei_download_stations.py  test_ncei_download_year_range.py  test_test.py
