[project]
name = "isd-lite-data"
version = "2.1.0"
description = "A toolkit for accessing, downloading, and processing ISD Lite data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Jan Kazil" }]

dependencies = [
  "numpy==2.3.3",
  "pandas==2.3.2",
  "Requests==2.32.5",
  "xarray==2025.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "mypy>=1.11",
  "ruff>=0.5",
  "pre-commit>=3.7",
]

[tool.setuptools]
script-files = [
  "scripts/CONUS_Metadata_Download.py",
  "scripts/CONUS_Observations_Download.py",
  "scripts/Switzerland_Metadata_Download.py",
  "scripts/Switzerland_Observations_Download.py",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.format]
quote-style = "preserve"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_optional = true
pretty = true
namespace_packages = true
mypy_path = "src"
files = ["src/isd_lite_data"]

[tool.pytest.ini_options]
addopts = "-q --cov=isd_lite_data --cov-report=term-missing"
testpaths = ["tests"]
